# version 0.62
18/03/2019
   - Added close index controller (margaretha)
11/04/2019
   - Fixed multiple Jackson implementations (margaretha)   

# version 0.61.6
06/02/2019
   - Added default foundry for structure layer (margaretha)
   - Added authentication to metadata controller (margaretha, issue #38)
   - Updated search krill error handling (margaretha)
18/02/2019
   - Updated handling errors from Koral (margaretha)
19/02/2019
   - Added fields to metadata controller (margaretha, issue #39)   

# version 0.61.5
17/12/2018
   - Added search timeout in meta query (margaretha)
18/12/2018
   - Updated RewriteHandler (margaretha)
19/12/2018
   - Added debug flags (margaretha)
   - Added order on the fields parameter of search get request (margaretha)
07/01/2019
   - Disabled send shutdown to existing jetty web server at start (margaretha)
09/01/2019
   - Added comments (margaretha)
   - Updated code structure (margaretha)
   - Removed spring security libraries and ManagerInterface (margaretha)
21/01/2019
   - Removed codes related to user registration & password management (margaretha)  
22/01/2019
   - Added create, edit, retrieve user default setting controllers (margaretha)
24/01/2019
   - Added default setting key validation & fixed UserdataTest (margaretha)   
28/01/2019
   - Updated Rewrite handler (margaretha)
29/01/2019
   - Handled "no resource found" cases (margaretha, issue #37)
30/01/2019
   - Updated shutdownToken (margaretha)
   - Added server shutdown description in readme (margaretha) 

version 0.61.4
14/11/2018
   - Integrated lite and full services and controllers in core (margaretha)
29/11/2018
   - Added OAuth2 scope for listing user clients (margaretha)
30/11/2018
   - Updated sample-index to Krill v0.58.1 (diewald)
06/12/2018
   - Fixed KoralNode at method (margaretha)
11/12/2018
   - Removed document controllers and KustvaktResource (margaretha) 
   - Fixed rewrite bugs (updated rewriteQuery & KoralNode) (margaretha)   

version 0.61.3