@@ -4,10 +4,11 @@ import static org.junit.Assert.assertEquals;
 
 import java.util.Map;
 
-import javax.ws.rs.core.MultivaluedHashMap;
 import javax.ws.rs.core.MultivaluedMap;
 
 import org.junit.Test;
+
+import com.sun.jersey.core.util.MultivaluedMapImpl;
 
 import de.ids_mannheim.korap.web.utils.MapUtils;
 import edu.emory.mathcs.backport.java.util.Arrays;
@@ -17,8 +18,7 @@ public class MapUtilsTest {
     @SuppressWarnings("unchecked")
     @Test
     public void testConvertToMap () {
-        MultivaluedMap<String, String> mm =
-                new MultivaluedHashMap<String, String>();
+        MultivaluedMap<String, String> mm = new MultivaluedMapImpl();
         mm.put("k1", Arrays.asList(new String[] { "a", "b", "c" }));
         mm.put("k2", Arrays.asList(new String[] { "d", "e", "f" }));
 
@@ -35,8 +35,7 @@ public class MapUtilsTest {
 
     @Test
     public void testConvertEmptyMap () {
-        MultivaluedMap<String, String> mm =
-                new MultivaluedHashMap<String, String>();
+        MultivaluedMap<String, String> mm = new MultivaluedMapImpl();
         Map<String, String> map = MapUtils.toMap(mm);
         assertEquals(0, map.size());
     }
