@@ -2,7 +2,9 @@
 18/03/2019
    - Added close index controller (margaretha)
 11/04/2019
-   - Fixed multiple Jackson implementations (margaretha)   
+   - Fixed multiple Jackson implementations (margaretha)
+25/04/2019
+   - Updated Jetty version due to vulnerabilities (margaretha)
 
 # version 0.61.6
 06/02/2019
